--- a/index.html
+++ b/index.html
@@ -3,16 +3,66 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Currículum vitae de XXX</title>
+	<title> Currículum vitae</title>
 </head>
 <body>
 	<head>
-		<h1>Curriculum Vitae</h1>
+		<h1>CV Elsa Socorro</h1>
 	</head>
 	<main>
-		<h2>Información personal</h2>
-	</main>
-	<footer>		
+	<section class="Contact">
+		<h2>Contacto</h2>
+		<ul>
+			<Li>Correo</Li><a href="mailto:help.elsa@gmail.com">help.elsa@gmail.com</a> 
+			<li>Telefono.</li><a href="+56957934578">+56957934578</a>
+		</ul>
+	</section>
+	<section class="obj">
+		<h2>Objetivos</h2>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae pariatur totam dolorum. Dolor, quo incidunt numquam deserunt animi necessitatibus earum asperiores provident ad voluptatum!</p>
+	</section>
+	<section class="prof">
+		<h2>Resumen profesional</h2>
+		 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, laboriosam laudantium? Modi doloribus illum cumque fuga temporibus libero officia incidunt numquam optio, eaque voluptatum, quasi aspernatur. Animi optio id ad.</p>
+	</section>
+	<section class="apt">
+		<h2>Aptitudes</h2>
+		<ul>
+			<li>Lorem, ipsum.</li>
+			<li>Lorem ipsum dolor sit.</li>
+			<li>Lorem, ipsum dolor.</li>
+			<li>Lorem, ipsum dolor.</li>
+			<li>Lorem, ipsum.</li>
+			<li>Lorem ipsum dolor sit.</li>
+			<li>Lorem, ipsum dolor.</li>
+		</ul>
+	<section class="exp">
+			<h3>Vice presidenta</h3>
+			<ol>
+				<li>Lorem, ipsum dolor.</li>
+				<li>Lorem, ipsum dolor.</li>
+				<li>Lorem, ipsum dolor.</li>	
+			</ol>
+	</section>
+	<section class="Acad">
+		<h2>Formacion Academica</h2>
+		<h3>Egresada en prevencion de riesdo</h3>
+		<a href="https://www.upla.cl">Universidad de Playa Ancha</a><p>Lorem ipsum dolor sit amet.</p>
+		<h3>Magister en seguridad</h3>
+		<a href="https://www.ist.cl">Instituto de Seguridad</a><p>Lorem ipsum dolor sit amet.</p>
+	</section>
+	<section class="crono">
+		<h2>Horario</h2>
+		<p>Lorem ipsum dolor sit amet.</p>
+		<ul>
+			<li>xx.xx-xx.xx</li>
+			<li>xx.xx-xx.xx</li>
+			<li>xx.xx-xx.xx</li>
+		</ul>
+	</section>
+		</main>
+	<footer>
+		<p>Ultima actualizacion </p>
 	</footer>	
 </body>
 </html>
