--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
 			<li>Lorem, ipsum.</li>
 			<li>Lorem ipsum dolor sit.</li>
 			<li>Lorem, ipsum dolor.</li>
+			<li>Lorem, ipsum dolor.</li>
 		</ul>
+	</section>
 	<section class="exp">
+		<h2>Experiencia</h2>
 			<h3>Vice presidenta</h3>
+			<a href="https://www.pizzahut.cl">Pizza hut</a><p>Lorem ipsum dolor sit amet.</p>
 			<ol>
 				<li>Lorem, ipsum dolor.</li>
 				<li>Lorem, ipsum dolor.</li>
