--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<head>
 		<h1>CV Elsa Socorro</h1>
+		<img src=“imagen.jpg” alt=”fotoreferencial”>
 	</head>
 	<main>
 	<section class="Contact">
